--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -75,6 +75,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --toto: oklab(59.73500000000001% 0.038 -0.22056);
 }
 
 .dark {
@@ -90,8 +91,7 @@
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  /*--accent: oklch(0.269 0 0);*/
-  --accent: oklab(59.73500000000001% 0.038 -0.22056);
+  --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
@@ -112,17 +112,14 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
-html, body {
-  font-family: var(--font-inter), sans-serif;
-}
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
-    font-family: var(--font-sans), sans-serif;
+    font-family: var(--font-inter), sans-serif;
   }
 
   header {
@@ -140,5 +137,10 @@ html, body {
     font-size: var(--text-xl);
     font-weight: var(--font-weight-medium);
     line-height: 1.4;
+  }
+
+  .card-icon {
+    background-color: #6c63ff33;
+    color: #6c63ff;
   }
 }
