[Yield] 👤 User 📖 View history

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -152,6 +152,10 @@
   }
 
   .bg-main {
+    background-color: var(--main);
+  }
+
+  .bg-main-foreground {
     background-color: var(--main-foreground);
   }
 }
